--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
+html,
+body{
+    width: 100%;
+}
+
 body{
     overflow: hidden;
+}
+
+/* Wrapper for page content to push down footer */
+#wrap{
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -60px;
 }
 
 #lblDistance{
@@ -37,4 +51,12 @@ body{
     padding: 5px;
     background-color: #ffffff;
     height: 300px;
+}
+
+.footer{
+    background-color: pink;
+    bottom: 0;
+    height: 60px;
+    position: absolute;
+    width:100%;
 }
